Overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import '~antd/dist/antd.css';
 
 body{
-    overflow: hidden;
+    overflow-x: hidden;
     margin: 0px
 }
 
@@ -21,3 +21,4 @@ body{
 .icon:hover{
     filter: drop-shadow(0px 0px 5px rgb(0,118,220,0.3));
 }
+
